<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>zh.lingvo</groupId>
    <artifactId>zh-lingvo-backend</artifactId>
    <version>0.2.0-SNAPSHOT</version>

    <modules>
        <module>zh-lingvo-util</module>
        <module>zh-lingvo-data</module>
        <module>zh-lingvo-restful-api</module>
        <module>zh-lingvo-reactjs-ui</module>
        <module>zh-lingvo-core</module>
    </modules>

    <packaging>pom</packaging>

    <name>ZhLingvo</name>
    <description>A Lingvo project</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.3.RELEASE</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <kotlin.version>1.3.61</kotlin.version>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <groovy-all.version>3.0.5</groovy-all.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <logback.version>1.2.9</logback.version>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <guava.version>32.0.0-jre</guava.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${groovy-all.version}</version>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>zh.lingvo</groupId>
                <artifactId>zh-lingvo-util</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>zh.lingvo</groupId>
                <artifactId>zh-lingvo-util</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>zh.lingvo</groupId>
                <artifactId>zh-lingvo-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>zh.lingvo</groupId>
                <artifactId>zh-lingvo-restful-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>zh.lingvo</groupId>
                <artifactId>zh-lingvo-core</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.gmavenplus</groupId>
                    <artifactId>gmavenplus-plugin</artifactId>
                    <version>1.10.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <goals>install</goals>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Spec.java</include>
                    </includes>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <developerConnection>scm:git:git@github.com:dzheleznyakov/ZhLingvoBackend.git</developerConnection>
        <tag>zh-lingvo-backend-0.1.0</tag>
    </scm>
</project>
